# Petanque

./: .gitignore  CMakeLists.txt  README.md  contest.cpp  contest.h  dialogteam.cpp  dialogteam.h  dialogteam.ui  fm_team.cpp  fm_team.h  fourmatchescontest.cpp  fourmatchescontest.h  fourmatchescontestwidget.cpp  fourmatchescontestwidget.h  fourmatchescontestwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  match.cpp  match.h  matchmodel.cpp  matchmodel.h  petanque.pro  phase.h  phasemodel.cpp  phasemodel.h  registrationwidget.cpp  registrationwidget.h  registrationwidget.ui  resource.qrc  setupwinnerdialog.cpp  setupwinnerdialog.h  setupwinnerdialog.ui  team.cpp  team.h  teammodel.cpp  teammodel.h  testteammodel.cpp  testteammodel.h  (+1 more)
